--- a/src/app/auth/components/login-form/login-form.component.html
+++ b/src/app/auth/components/login-form/login-form.component.html
@@ -15,7 +15,7 @@
           <input 
             type="email" 
             placeholder="Correo" 
-            class="w-full px-4 rounded-2xl bg-[#EFEFEF] text-[#918C8C] py-2"
+            class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="email"
             name="email"
             required>
@@ -24,7 +24,7 @@
           <input 
             type="password" 
             placeholder="Contraseña" 
-            class="w-full px-4 rounded-2xl bg-[#EFEFEF] text-[#918C8C] py-2"
+            class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="password"
             name="password"
             required>
@@ -34,17 +34,23 @@
           class="w-full bg-[#FC7516] text-white font-bold py-2 rounded-md hover:bg-yellow-600 transition-colors">
           Iniciar sesión
         </button>
+
+        <button 
+          type="submit" 
+          class="w-full bg-[#E8E8E8] text-black font-bold py-2 rounded-md hover:bg-gray-100 transition-colors outline-2 outline-gray-300">
+          Continuar como invitado
+        </button>
       </form>
       
       <!-- Login con redes sociales -->
-      <div class="mt-8 text-center">
+      <div class="mt-8 text-center ">
         <p class="text-[#A7A7A7]">O inicia sesión con</p>
-        <div class="flex justify-center space-x-4 mt-2 flex-col items-center w-full gap-y-4">
-          <button class="flex items-center gap-2 p-2 border rounded-full px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
+        <div class="flex justify-center  mt-2 flex-col items-center w-full gap-y-4">
+          <button class="flex items-center gap-2 p-2 border rounded-md  hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
             <img src="img/google.svg" alt="Google" class="w-5 h-5">
             <span>Google</span>
           </button>
-          <button class="flex items-center gap-2 p-2 border rounded-full px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
+          <button class="flex items-center gap-2 p-2 border rounded-md px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
             <img src="img/apple.svg" alt="Apple" class="w-5 h-5">
             <span>Apple</span>
           </button>
@@ -53,9 +59,9 @@
       
      <!-- Link para iniciar sesión -->
      <div class="mt-6 text-center">
-        <p class="text-gray-600">
+        <p class="text-gray-500">
           ¿No tienes una cuenta? 
-          <a [routerLink]="'/register'" class="text-[#FC7516] font-bold hover:underline">Inicia Sesión</a>
+          <a [routerLink]="'/register'" class="text-[#FC7516] font-medium hover:underline">Inicia Sesión</a>
         </p>
       </div>
     </div>
