--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -14,7 +14,7 @@
           <input 
             type="email" 
             placeholder="Correo" 
-            class="w-full px-4 rounded-2xl bg-[#EFEFEF] text-[#918C8C] py-2"
+            class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="email"
             name="email"
             required>
@@ -23,7 +23,7 @@
           <input 
             type="password" 
             placeholder="Contraseña" 
-            class="w-full px-4 rounded-2xl bg-[#EFEFEF] text-[#918C8C] py-2"
+            class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="password"
             name="password"
             required>
@@ -32,7 +32,7 @@
           <input 
             type="password" 
             placeholder="Confirmar Contraseña" 
-            class="w-full px-4 rounded-2xl bg-[#EFEFEF] text-[#918C8C] py-2"
+            class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="confirmPassword"
             name="confirmPassword"
             required>
@@ -42,17 +42,22 @@
           class="w-full bg-[#FC7516] text-white font-bold py-2 rounded-md hover:bg-yellow-600 transition-colors">
           Registrarse
         </button>
+        <button 
+          type="submit" 
+          class="w-full bg-[#E8E8E8] text-black font-bold py-2 rounded-md hover:bg-gray-100 transition-colors outline-2 outline-gray-300">
+          Continuar como invitado
+        </button>
       </form>
       
       <!-- Registro con redes sociales -->
       <div class="mt-8 text-center">
         <p class="text-[#A7A7A7]">O inicia sesión con</p>
-        <div class="flex justify-center space-x-4 mt-2 flex-col items-center w-full gap-y-4">
-          <button class="flex items-center gap-2 p-2 border rounded-full px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
+        <div class="flex justify-center  mt-2 flex-col items-center w-full gap-y-4">
+          <button class="flex items-center gap-2 p-2 border rounded-md px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
             <img src="img/google.svg" alt="Google" class="w-5 h-5">
             <span>Google</span>
           </button>
-          <button class="flex items-center gap-2 p-2 border rounded-full px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
+          <button class="flex items-center gap-2 p-2 border rounded-md px-4 hover:bg-gray-100 transition-colors w-full justify-center bg-[#F9F9F9] border-[#D4D4D4]">
             <img src="img/apple.svg" alt="Apple" class="w-5 h-5">
             <span>Apple</span>
           </button>
@@ -61,9 +66,9 @@
       
       <!-- Link para iniciar sesión -->
       <div class="mt-6 text-center">
-        <p class="text-gray-600">
+        <p class="text-gray-500">
           ¿Ya tienes una cuenta? 
-          <a [routerLink]="'/'" class="text-[#FC7516] font-bold hover:underline">Inicia Sesión</a>
+          <a [routerLink]="'/'" class="text-[#FC7516] font-medium hover:underline">Inicia Sesión</a>
         </p>
       </div>
       
