--- a/src/app/landing-feature/pages/landing-page/landing-page.component.css
+++ b/src/app/landing-feature/pages/landing-page/landing-page.component.css
@@ -4,14 +4,9 @@
   position: relative;
   min-height: 100vh;
   width: 100%;
-  background-image: url('../../../../../public/img//bernd-dittrich-0vAAngcguI0-unsplash\ 1.png');
-  background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-color: whitesmoke;
 }
 
-.overlay {
-  position: absolute;
-  inset: 0; /* top, right, bottom, left: 0 */
-  background-color: rgba(0, 0, 0, 0.5);
-}
+
