--- a/src/app/landing-feature/pages/landing-page/landing-page.component.html
+++ b/src/app/landing-feature/pages/landing-page/landing-page.component.html
@@ -7,28 +7,44 @@
   <!-- Main Content -->
   <main class="flex-1 relative z-10">
     <!-- Hero Banner -->
-    <div class="w-full h-screen flex items-center">
-      <div class="container mx-auto px-10 text-white">
-        <h2 class="text-2xl font-normal mb-2 opacity-90">BIENVENIDO AL</h2>
-        <h1 class="text-6xl font-bold mb-5 leading-tight">
-          PORTAL DE <br />
-          FACTURACIÓN
-        </h1>
-        <p class="text-lg mb-10 leading-relaxed opacity-90">
-          Genera tu CFDI de manera fácil, rápida y segura. Facturación <br />
-          disponible durante el mes de tu compra.
-        </p>
-        <div class="flex gap-5">
-          <button
-            class="min-w-[200px] px-2 py-2 text-base font-semibold uppercase rounded transition-all duration-300 ease-in-out bg-orange-500 text-white hover:bg-orange-600 hover:-translate-y-0.5 hover:shadow-lg"
-          >
-            FACTURAR
-          </button>
-          <button
-            class="min-w-[200px] text-base font-semibold uppercase rounded transition-all duration-300 ease-in-out text-white bg-white/20 hover:bg-white/30 hover:-translate-y-0.5"
-          >
-            CHATBOT
-          </button>
+    <div class="w-full h-screen flex items-center ">
+      <div class="container mx-auto  text-white grid grid-cols-1 md:grid-cols-2 gap-10 items-center justify-between py-12">
+        <!-- Sección izquierda (Texto + Botones) -->
+        <div class="h-full flex flex-col justify-end">
+          
+          <h2 class="text-4xl text-gray-700 font-bold mb-2 opacity-90">BIENVENIDO AL</h2>
+          <h1 class="text-7xl text-black font-bold mb-5 leading-tight">
+            PORTAL DE <br>
+            FACTURACIÓN
+          </h1>
+          <h3 class="text-4xl font-bold text-orange-500 mb-4">FLECHA AMARILLA</h3>
+          <ul class="flex flex-col sm:flex-row gap-4 mb-10 text-lg opacity-90 text-gray-600 ">
+            <li>• Facturación rápida</li>
+            <li>• Disponible las 24 horas</li>
+          </ul>
+          <div class="flex gap-18">
+            <button
+              class="min-w-[200px] px-5 py-5 text-base font-semibold uppercase rounded-md transition-all duration-300 ease-in-out bg-orange-500 text-white hover:bg-orange-600 hover:-translate-y-0.5 hover:shadow-lg"
+            >
+              FACTURAR
+            </button>
+            <button
+              class="min-w-[200px] text-base font-semibold uppercase  transition-all border-2 border-gray-700 rounded-md duration-300 ease-in-out text-gray-700 bg-white/20 hover:bg-white/30 hover:-translate-y-0.5"
+            >
+              CONTACTO
+            </button>
+          </div>
+        </div>
+
+        <!-- Sección derecha (Imagen + texto sobrepuesto) -->
+        <div class="relative justify-between">
+          <div
+            class="rounded-lg shadow-lg w-full h-[550px] bg-cover bg-center"
+            style="background-image: url('/img/register_ban.webp');"
+          ></div>
+          <div class="absolute bottom-4 left-8 text-white text-4xl font-bold  leading-tight">
+            GENERA TU FACTURA <br />FÁCIL, RÁPIDO Y SEGURO
+          </div>
         </div>
       </div>
     </div>
