--- a/src/app/mainView-feature/components/SearchAndFilter/SearchAndFilter.component.html
+++ b/src/app/mainView-feature/components/SearchAndFilter/SearchAndFilter.component.html
@@ -1,14 +1,14 @@
 <div class="flex justify-between items-center mb-6">
   <div class="flex space-x-2">
-    <button class="px-4 py-2 bg-gray-800 text-white rounded">Timbradas</button>
-    <button class="px-4 py-2 bg-gray-200 rounded">No timbradas</button>
+    <button class="px-4 py-2 bg-[#282727] outline-1 outline-[#16130C] text-white rounded-md font-semibold">Timbradas</button>
+    <button class="px-4 py-2 bg-[#EEEDEA] rounded font-semibold">No timbradas</button>
   </div>
-  <div class="flex items-center space-x-2">
+  <div class="flex items-center space-x-4 width">
     <div class="relative">
       <input
         type="text"
         placeholder="Buscar por razón social"
-        class="pl-3 pr-10 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-orange-500 focus:border-orange-500"
+        class=" w-100 pl-3 pr-10 py-2 border-2 text-gray-300 border-gray-100 rounded-md focus:outline-none focus:ring-gray-500 focus:gray-orange-500"
       />
       <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -29,12 +29,11 @@
       <div class="mx-2 h-6 border-l border-gray-300"></div>
       <button
         type="button"
-        class="inline-flex justify-center items-center px-4 py-2 text-sm font-medium text-gray-700 focus:outline-none"
+        class="inline-flex justify-center items-center space-x-1.5 px-4 py-2 text-sm font-medium text-gray-700 focus:outline-none"
       >
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M3 3a1 1 0 011-1h12a1 1 0 011 1v3a1 1 0 01-.293.707L12 11.414V15a1 1 0 01-.293.707l-2 2A1 1 0 018 17v-5.586L3.293 6.707A1 1 0 013 6V3z" clip-rule="evenodd" />
-        </svg>
-        Filtrar
+      <img src="img/filter-funnel-01.svg" alt="Apple" class="w-4 h-4">
+            <span>Filtrar</span>
+       
       </button>
     </div>
   </div>
