--- a/src/app/mainView-feature/components/breadcrumbNavigation/breadcrumbNavigation.component.html
+++ b/src/app/mainView-feature/components/breadcrumbNavigation/breadcrumbNavigation.component.html
@@ -1,6 +1,6 @@
 <div class="mb-2">
   <p class="text-sm text-gray-500">
     <a href="#" class="hover:text-gray-700">Inicio</a> /
-    <a href="#" class="hover:text-gray-700">Administración de clientes</a>
+    <a href="#" class="hover:text-orange-600">Administración de clientes</a>
   </p>
 </div>
