--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar-home/>
 
-<div class="max-w-7xl ml-20 mx-9 mt-20 p-6 bg-white">
+<div class="max-w-7xl  mx-9 mt-10 p-6 bg-white">
   <div class="mb-10">
     <h1 class="text-4xl font-bold mb-2">Preguntas frecuentes</h1>
     <p class="text-gray-600 mb-2">
