--- a/src/app/auth/pages/register-page/register-page.component.html
+++ b/src/app/auth/pages/register-page/register-page.component.html
@@ -1,11 +1,11 @@
-<!-- Contenedor principal sin padding-y -->
+<!-- Main container without padding-y -->
 <div class="flex h-screen w-full overflow-hidden py-6 px-5">
-  <!-- Lado izquierdo con el banner -->
+  <!-- Left side with banner -->
   <div class="w-1/2 md:block hidden">
     <app-register-banner />
   </div>
-  
-  <!-- Lado derecho con el formulario de registro -->
+
+  <!-- Right side with registration form -->
   <div class="w-full md:w-1/2 flex items-center justify-center">
     <app-register-form />
   </div>
