--- a/src/app/mainView-feature/components/Table/Table.component.html
+++ b/src/app/mainView-feature/components/Table/Table.component.html
@@ -16,7 +16,7 @@
   <div class="max-h-[400px] overflow-y-auto custom-scroll">
     <table class="min-w-full divide-y divide-gray-200">
       <tbody class="bg-white divide-y divide-gray-200">
-        <!-- Fila de ejemplo -->
+        <!-- Example row -->
         <tr>
           <td class="px-6 py-4 whitespace-nowrap text-sm">001</td>
           <td class="px-6 py-4 whitespace-nowrap">
@@ -43,7 +43,7 @@
             <button class="text-gray-400 hover:text-gray-600">...</button>
           </td>
         </tr>
-        <!-- Repite más filas si necesitas -->
+        <!-- Repeat more rows if needed -->
         <tr>
           <td class="px-6 py-4 whitespace-nowrap text-sm">001</td>
           <td class="px-6 py-4 whitespace-nowrap">
