--- a/src/app/auth/components/login-form/login-form.component.html
+++ b/src/app/auth/components/login-form/login-form.component.html
@@ -1,48 +1,48 @@
 <div class="w-full h-full flex items-center justify-center">
     <div class="w-full max-w-md px-8 overflow-y-auto max-h-full py-6">
-     
+
       <div class="mb-8 flex justify-center">
         <img src="img/logo.webp" alt="Logo Flecha Amarilla" class="h-10">
       </div>
-      
-    
+
+
       <h2 class="text-3xl font-bold text-center mb-4">Bienvenido</h2>
       <p class="text-center text-gray-600 mb-6">Inicia sesión para comenzar a facturar</p>
-      
-      <!-- Formulario de login -->
+
+      <!-- form login -->
       <form class="space-y-4" (ngSubmit)="onSubmit()">
         <div>
-          <input 
-            type="email" 
-            placeholder="Correo" 
+          <input
+            type="email"
+            placeholder="Correo"
             class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="email"
             name="email"
             required>
         </div>
         <div>
-          <input 
-            type="password" 
-            placeholder="Contraseña" 
+          <input
+            type="password"
+            placeholder="Contraseña"
             class="w-full px-4 rounded-md bg-[#EFEFEF] text-[#918C8C] py-2"
             [(ngModel)]="password"
             name="password"
             required>
         </div>
-        <button 
-          type="submit" 
+        <button
+          type="submit"
           class="w-full bg-[#FC7516] text-white font-bold py-2 rounded-md hover:bg-yellow-600 transition-colors">
           Iniciar sesión
         </button>
 
-        <button 
-          type="submit" 
+        <button
+          type="submit"
           class="w-full bg-[#E8E8E8] text-black font-bold py-2 rounded-md hover:bg-gray-100 transition-colors outline-2 outline-gray-300">
           Continuar como invitado
         </button>
       </form>
-      
-      <!-- Login con redes sociales -->
+
+      <!-- Login with social networks -->
       <div class="mt-8 text-center ">
         <p class="text-[#A7A7A7]">O inicia sesión con</p>
         <div class="flex justify-center  mt-2 flex-col items-center w-full gap-y-4">
@@ -56,11 +56,11 @@
           </button>
         </div>
       </div>
-      
-     <!-- Link para iniciar sesión -->
+
+     <!-- Link to login -->
      <div class="mt-6 text-center">
         <p class="text-gray-500">
-          ¿No tienes una cuenta? 
+          ¿No tienes una cuenta?
           <a [routerLink]="'/register'" class="text-[#FC7516] font-medium hover:underline">Inicia Sesión</a>
         </p>
       </div>
