--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -49,7 +49,7 @@
         </button>
       </form>
 
-      <!-- Registro con redes sociales -->
+      <!-- Registration with social networks -->
       <div class="mt-8 text-center">
         <p class="text-[#A7A7A7]">O inicia sesión con</p>
         <div class="flex justify-center  mt-2 flex-col items-center w-full gap-y-4">
@@ -64,7 +64,7 @@
         </div>
       </div>
 
-      <!-- Link para iniciar sesión -->
+      <!-- Link to login -->
       <div class="mt-6 text-center">
         <p class="text-gray-500">
           ¿Ya tienes una cuenta?
