--- a/src/app/landing-feature/pages/landing-page/landing-page.component.html
+++ b/src/app/landing-feature/pages/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar />
 <!-- Main Content wrapper with full-screen background -->
 <div class="background-container">
-  <!-- Overlay para asegurar legibilidad del contenido -->
+  <!-- Overlay to ensure readability of content -->
   <div class="overlay"></div>
 
   <!-- Main Content -->
@@ -9,7 +9,7 @@
     <!-- Hero Banner -->
     <div class="w-full h-screen flex items-center ">
       <div class="container mx-auto text-white grid grid-cols-1 md:grid-cols-2 gap-10 items-center justify-between py-12">
-        <!-- Sección izquierda (Texto + Botones) -->
+        <!-- Left section (Text + Buttons) -->
         <div class="h-full flex flex-col justify-end">
 
           <h2 class="text-4xl text-gray-700 font-bold mb-2 opacity-90">BIENVENIDO AL</h2>
@@ -38,7 +38,7 @@
           </div>
         </div>
 
-        <!-- Sección derecha (Imagen + texto sobrepuesto) -->
+        <!-- Right section (Image + text overlay) -->
         <div class="relative justify-between">
           <div
             class="rounded-lg shadow-lg w-full h-[550px] bg-cover bg-center"
