--- a/src/app/proccess-bill/components/form-ticket/form-ticket.component.html
+++ b/src/app/proccess-bill/components/form-ticket/form-ticket.component.html
@@ -1,13 +1,13 @@
 <section class="w-full flex flex-col ">
     <h3 class="text-lg font-semibold mb-4">Información del ticket</h3>
-    
+
     <div class="grid grid-cols-1 md:grid-cols-3 gap-x-5 gap-y-4">
-      <!-- Primera fila -->
+      <!-- First row -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           Token Ticket
         </label>
-        <input 
+        <input
           id="tokenTicket"
           name="tokenTicket"
           type="text"
@@ -17,7 +17,7 @@
           class="w-full py-2 px-3 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-[#FC7516] placeholder:text-gray-400 text-gray-700 shadow-sm text-sm"
         />
       </div>
-      
+
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           Forma de pago
@@ -34,12 +34,12 @@
           </option>
         </select>
       </div>
-      
+
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           Fecha
         </label>
-        <input 
+        <input
           id="fecha"
           name="fecha"
           type="date"
@@ -48,13 +48,13 @@
           readonly
         />
       </div>
-      
-      <!-- Segunda fila -->
+
+      <!-- second row -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           Hora
         </label>
-        <input 
+        <input
           id="hora"
           name="hora"
           type="time"
@@ -63,7 +63,7 @@
           readonly
         />
       </div>
-      
+
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           Régimen Fiscal
@@ -80,7 +80,7 @@
           </option>
         </select>
       </div>
-      
+
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1">
           Uso CFDI
